catkin_w_s/logs/control_scripts/build.make.161.log.stderr
/home/subho/catkin_w_s/src/control_scripts/src/scripts/root_controller.cpp: In function ‘int main(int, char**)’:
/home/subho/catkin_w_s/src/control_scripts/src/scripts/root_controller.cpp:43:13: error: redeclaration of ‘Takeoff takeoff’
   43 |     Takeoff takeoff(1);
      |             ^~~~~~~
/home/subho/catkin_w_s/src/control_scripts/src/scripts/root_controller.cpp:36:13: note: ‘Takeoff takeoff’ previously declared here
   36 |     Takeoff takeoff(0);
      |             ^~~~~~~
make[2]: *** [CMakeFiles/root_controller.dir/build.make:63: CMakeFiles/root_controller.dir/src/scripts/root_controller.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:182: CMakeFiles/root_controller.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
